2011-05-11  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        input type=email is too strict
        https://bugs.webkit.org/show_bug.cgi?id=55988

        * fast/forms/resources/ValidityState-typeMismatch-email.js:
        * fast/forms/ValidityState-typeMismatch-email-expected.txt:
2011-05-11  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        input type=email is too strict
        https://bugs.webkit.org/show_bug.cgi?id=55988

        Follow the updated specification.

        * html/EmailInputType.cpp: Update the pattern to allow a domain part without periods.

Canonical link: https://commits.webkit.org/75955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86298 268f45cc-cd09-0410-ab3c-d52691b4dbfc